cmake_minimum_required(VERSION 3.28)

project(2DGameEngineDemo LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_CXX_FLAGS_DEBUGEDITOR "${CMAKE_CXX_FLAGS_DEBUG}")
set(CMAKE_C_FLAGS_DEBUGEDITOR "${CMAKE_C_FLAGS_DEBUG}")
set(CMAKE_EXE_LINKER_FLAGS_DEBUGEDITOR "${CMAKE_EXE_LINKER_FLAGS_DEBUG}")
set(CMAKE_SHARED_LINKER_FLAGS_DEBUGEDITOR "${CMAKE_SHARED_LINKER_FLAGS_DEBUG}")

set(ADDITIONAL_INCLUDE_PATH "${CMAKE_SOURCE_DIR}/Tools/CMake")
include(${ADDITIONAL_INCLUDE_PATH}/Functions.cmake)

add_subdirectory(Source/Engine)
add_subdirectory(Source/Demo)
